@@ -269,7 +269,7 @@ public class SnapshotTesting {
 
     public static String getTextContent(Path file) {
         try {
-            return new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+            return Files.readString(file);
         } catch (IOException e) {
             throw new UncheckedIOException("Unable to read " + file.toString(), e);
         }
